FindBugs cleanup
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10610 ef53c05b-3124-4d59-ae7d-fe3273f42be7